@@ -1,1 +1,1 @@
-LINBO 2.3.60-0
+LINBO 2.3.61-0
